// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChooseCategoriesView component renders the component as expected when data has been loaded 1`] = `
<AppView
  headerMessage="Translated[translation:chooseCategoryMessage]({})"
  loading={false}
>
  <ConditionalContainer
    display={true}
  >
    <Cards
      items={
        [
          {
            "id": "mock-id",
            "label": "mock-label",
            "name": "mock-name",
          },
        ]
      }
      onItemSelect={[Function]}
    />
  </ConditionalContainer>
</AppView>
`;

exports[`ChooseCategoriesView component renders the component as expected when it has errors 1`] = `
<AppView
  error={[Error: Unexpected error]}
  headerMessage="Translated[translation:chooseCategoryMessage]({})"
  loading={false}
>
  <ConditionalContainer
    display={false}
  >
    <Cards
      onItemSelect={[Function]}
    />
  </ConditionalContainer>
</AppView>
`;

exports[`ChooseCategoriesView component renders the component as expected when loading 1`] = `
<AppView
  headerMessage="Translated[translation:waitMessage]({})"
  loading={true}
>
  <ConditionalContainer
    display={false}
  >
    <Cards
      onItemSelect={[Function]}
    />
  </ConditionalContainer>
</AppView>
`;
